--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2206,6 +2206,279 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select \\\n",
+    "\tx.cdate , \\\n",
+    "\tsum(x.python_yn) as python, \\\n",
+    "\tsum(x.javascript_yn) as javascript, \\\n",
+    "\tsum(x.reactjs_yn) as reactjs, \\\n",
+    "\tsum(x.java_yn) as java, \\\n",
+    "\tsum(x.csharp_yn) as csharp, \\\n",
+    "\tsum(x.html_yn) as html, \\\n",
+    "\tsum(x.r_yn) as r, \\\n",
+    "\tsum(x.pandas_yn) as pandas, \\\n",
+    "\tsum(x.css_yn) as css, \\\n",
+    "\tsum(x.flutter_yn) as flutter, \\\n",
+    "\tsum(x.sql_yn) as sql, \\\n",
+    "\tsum(x.android_yn) as android, \\\n",
+    "\tsum(x.nodejs_yn) as nodejs, \\\n",
+    "\tsum(x.cplusplus_yn) as cplusplus, \\\n",
+    "\tsum(x.typescript_yn) as typescript, \\\n",
+    "\tsum(x.php_yn) as php, \\\n",
+    "\tsum(x.python_3x_yn) as python_3x, \\\n",
+    "\tsum(x.dataframe_yn) as dataframe, \\\n",
+    "\tsum(x.arrays_yn) as arrays, \\\n",
+    "\tsum(x.angular_yn) as angular, \\\n",
+    "\tsum(x.django_yn) as django, \\\n",
+    "\tsum(x.json_yn) as json, \\\n",
+    "\tsum(x.dart_yn) as dart, \\\n",
+    "\tsum(x.mysql_yn) as mysql, \\\n",
+    "\tsum(x.c_yn) as c, \\\n",
+    "\tsum(x.excel_yn) as excel, \\\n",
+    "\tsum(x.laravel_yn) as laravel, \\\n",
+    "\tsum(x.swift_yn) as swift, \\\n",
+    "\tsum(x.spring_boot_yn) as spring_boot, \\\n",
+    "\tsum(x.amazon_web_services_yn) as amazon_web_services, \\\n",
+    "\tsum(x.react_native_yn) as react_native, \\\n",
+    "\tsum(x.postgresql_yn) as postgresql, \\\n",
+    "\tsum(x.azure_yn) as azure, \\\n",
+    "\tsum(x.kotlin_yn) as kotlin, \\\n",
+    "\tsum(x.docker_yn) as docker, \\\n",
+    "\tsum(x.list_yn) as list, \\\n",
+    "\tsum(x.firebase_yn) as firebase, \\\n",
+    "\tsum(x.ios_yn) as ios, \\\n",
+    "\tsum(x.sql_server_yn) as sql_server, \\\n",
+    "\tsum(x.jquery_yn) as jquery, \\\n",
+    "\tsum(x.mongodb_yn) as mongodb, \\\n",
+    "\tsum(x.vuejs_yn) as vuejs, \\\n",
+    "\tsum(x.numpy_yn) as numpy, \\\n",
+    "\tsum(x.net_yn) as net, \\\n",
+    "\tsum(x.vba_yn) as vba, \\\n",
+    "\tsum(x.regex_yn) as regex, \\\n",
+    "\tsum(x.string_yn) as string, \\\n",
+    "\tsum(x.spring_yn) as spring, \\\n",
+    "\tsum(x.powershell_yn) as powershell, \\\n",
+    "\tsum(x.linux_yn) as linux \\\n",
+    "from tt_postnum_per_tag x \\\n",
+    "group by x.cdate \\\n",
+    "\t; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "'cdate', 'python', 'javascript', 'reactjs', 'java', 'c#',\n",
+    "       'html', 'r', 'pandas', 'css', 'flutter', 'sql', 'android', 'nodejs',\n",
+    "       'cplusplus', 'typescript', 'php', 'python_3x', 'dataframe', 'arrays',\n",
+    "       'angular', 'django', 'json', 'dart', 'mysql', 'c', 'excel', 'laravel',\n",
+    "       'swift', 'spring_boot', 'amazon_web_services', 'react_native',\n",
+    "       'postgresql', 'azure', 'kotlin', 'docker', 'list', 'firebase', 'ios',\n",
+    "       'sql_server', 'jquery', 'mongodb', 'vuejs', 'numpy', 'net', 'vba',\n",
+    "       'regex', 'string', 'spring', 'powershell', 'linux'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_postcnt_per_tag.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select x.year, \\\n",
+    "       sum(x.python)              as python, \\\n",
+    "       sum(x.javascript)          as javascript, \\\n",
+    "       sum(x.reactjs)             as reactjs, \\\n",
+    "       sum(x.java)                as java, \\\n",
+    "       sum(x.csharp)              as csharp, \\\n",
+    "       sum(x.html)                as html, \\\n",
+    "       sum(x.r)                   as r, \\\n",
+    "       sum(x.pandas)              as pandas, \\\n",
+    "       sum(x.css)                 as css, \\\n",
+    "       sum(x.flutter)             as flutter, \\\n",
+    "       sum(x.sql)                 as sql, \\\n",
+    "       sum(x.android)             as android, \\\n",
+    "       sum(x.nodejs)              as nodejs, \\\n",
+    "       sum(x.cplusplus)           as cplusplus, \\\n",
+    "       sum(x.typescript)          as typescript, \\\n",
+    "       sum(x.php)                 as php, \\\n",
+    "       sum(x.python_3x)           as python_3x, \\\n",
+    "       sum(x.dataframe)           as dataframe, \\\n",
+    "       sum(x.arrays)              as arrays, \\\n",
+    "       sum(x.angular)             as angular, \\\n",
+    "       sum(x.django)              as django, \\\n",
+    "       sum(x.json)                as json, \\\n",
+    "       sum(x.dart)                as dart, \\\n",
+    "       sum(x.mysql)               as mysql, \\\n",
+    "       sum(x.c)                   as c, \\\n",
+    "       sum(x.excel)               as excel, \\\n",
+    "       sum(x.laravel)             as laravel, \\\n",
+    "       sum(x.swift)               as swift, \\\n",
+    "       sum(x.spring_boot)         as spring_boot, \\\n",
+    "       sum(x.amazon_web_services) as amazon_web_services, \\\n",
+    "       sum(x.react_native)        as react_native, \\\n",
+    "       sum(x.postgresql)          as postgresql, \\\n",
+    "       sum(x.azure)               as azure, \\\n",
+    "       sum(x.kotlin)              as kotlin, \\\n",
+    "       sum(x.docker)              as docker, \\\n",
+    "       sum(x.list)                as list, \\\n",
+    "       sum(x.firebase)            as firebase, \\\n",
+    "       sum(x.ios)                 as ios, \\\n",
+    "       sum(x.sql_server)          as sql_server, \\\n",
+    "       sum(x.jquery)              as jquery, \\\n",
+    "       sum(x.mongodb)             as mongodb, \\\n",
+    "       sum(x.vuejs)               as vuejs, \\\n",
+    "       sum(x.numpy)               as numpy, \\\n",
+    "       sum(x.net)                 as net, \\\n",
+    "       sum(x.vba)                 as vba, \\\n",
+    "       sum(x.regex)               as regex, \\\n",
+    "       sum(x.string)              as string, \\\n",
+    "       sum(x.spring)              as spring, \\\n",
+    "       sum(x.powershell)          as powershell, \\\n",
+    "       sum(x.linux)               as linux \\\n",
+    "from ( \\\n",
+    "         select SUBSTRING(cdate, 1, 4) as year, \\\n",
+    "                python_yn              as python, \\\n",
+    "                javascript_yn          as javascript, \\\n",
+    "                reactjs_yn             as reactjs, \\\n",
+    "                java_yn                as java, \\\n",
+    "                csharp_yn                as csharp, \\\n",
+    "                html_yn as html, \\\n",
+    "                r_yn                   as r, \\\n",
+    "                pandas_yn              as pandas, \\\n",
+    "                css_yn                 as css, \\\n",
+    "                flutter_yn             as flutter, \\\n",
+    "                sql_yn                 as sql, \\\n",
+    "                android_yn             as android, \\\n",
+    "                nodejs_yn              as nodejs, \\\n",
+    "                cplusplus_yn           as cplusplus, \\\n",
+    "                typescript_yn          as typescript, \\\n",
+    "                php_yn                 as php, \\\n",
+    "                python_3x_yn           as python_3x, \\\n",
+    "                dataframe_yn           as dataframe, \\\n",
+    "                arrays_yn              as arrays, \\\n",
+    "                angular_yn             as angular, \\\n",
+    "                django_yn              as django, \\\n",
+    "                json_yn                as json, \\\n",
+    "                dart_yn                as dart, \\\n",
+    "                mysql_yn               as mysql, \\\n",
+    "                c_yn                   as c, \\\n",
+    "                excel_yn               as excel, \\\n",
+    "                laravel_yn             as laravel, \\\n",
+    "                swift_yn               as swift, \\\n",
+    "                spring_boot_yn         as spring_boot, \\\n",
+    "                amazon_web_services_yn as amazon_web_services, \\\n",
+    "                react_native_yn        as react_native, \\\n",
+    "                postgresql_yn          as postgresql, \\\n",
+    "                azure_yn               as azure, \\\n",
+    "                kotlin_yn              as kotlin, \\\n",
+    "                docker_yn              as docker, \\\n",
+    "                list_yn                as list, \\\n",
+    "                firebase_yn            as firebase, \\\n",
+    "                ios_yn                 as ios, \\\n",
+    "                sql_server_yn          as sql_server, \\\n",
+    "                jquery_yn              as jquery, \\\n",
+    "                mongodb_yn             as mongodb, \\\n",
+    "                vuejs_yn               as vuejs, \\\n",
+    "                numpy_yn               as numpy, \\\n",
+    "                net_yn                 as net, \\\n",
+    "                vba_yn                 as vba, \\\n",
+    "                regex_yn               as regex, \\\n",
+    "                string_yn              as string, \\\n",
+    "                spring_yn              as spring, \\\n",
+    "                powershell_yn          as powershell, \\\n",
+    "                linux_yn               as linux \\\n",
+    "         from tt_tot_postnum_per_tag \\\n",
+    "     ) x \\\n",
+    "group by x.year \\\n",
+    "; \\\n",
+    "\" \n",
+    ")\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "\n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "'year', 'python', 'javascript', 'reactjs', 'java', 'c#',\n",
+    "       'html', 'r', 'pandas', 'css', 'flutter', 'sql', 'android', 'nodejs',\n",
+    "       'cplusplus', 'typescript', 'php', 'python_3x', 'dataframe', 'arrays',\n",
+    "       'angular', 'django', 'json', 'dart', 'mysql', 'c', 'excel', 'laravel',\n",
+    "       'swift', 'spring_boot', 'amazon_web_services', 'react_native',\n",
+    "       'postgresql', 'azure', 'kotlin', 'docker', 'list', 'firebase', 'ios',\n",
+    "       'sql_server', 'jquery', 'mongodb', 'vuejs', 'numpy', 'net', 'vba',\n",
+    "       'regex', 'string', 'spring', 'powershell', 'linux'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_postcnt_per_tag_year.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
