--- a/DA/5_content_volumn.ipynb
+++ b/DA/5_content_volumn.ipynb
@@ -418,6 +418,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CAST(a.net_yn AS NUMERIC)/ a.tot    as    net_yn ,  CAST(a.amazon_web_services_yn AS NUMERIC)/ a.tot    as    amazon_web_services_yn ,  CAST(a.android_yn AS NUMERIC)/ a.tot    as    android_yn ,  CAST(a.angular_yn AS NUMERIC)/ a.tot    as    angular_yn ,  CAST(a.api_yn AS NUMERIC)/ a.tot    as    api_yn ,  CAST(a.arrays_yn AS NUMERIC)/ a.tot    as    arrays_yn ,  CAST(a.azure_yn AS NUMERIC)/ a.tot    as    azure_yn ,  CAST(a.c_yn AS NUMERIC)/ a.tot    as    c_yn ,  CAST(a.c#_yn AS NUMERIC)/ a.tot    as    c#_yn ,  CAST(a.cplusplus_yn AS NUMERIC)/ a.tot    as    cplusplus_yn ,  CAST(a.css_yn AS NUMERIC)/ a.tot    as    css_yn ,  CAST(a.dart_yn AS NUMERIC)/ a.tot    as    dart_yn ,  CAST(a.dataframe_yn AS NUMERIC)/ a.tot    as    dataframe_yn ,  CAST(a.django_yn AS NUMERIC)/ a.tot    as    django_yn ,  CAST(a.docker_yn AS NUMERIC)/ a.tot    as    docker_yn ,  CAST(a.excel_yn AS NUMERIC)/ a.tot    as    excel_yn ,  CAST(a.firebase_yn AS NUMERIC)/ a.tot    as    firebase_yn ,  CAST(a.flutter_yn AS NUMERIC)/ a.tot    as    flutter_yn ,  CAST(a.html_yn AS NUMERIC)/ a.tot    as    html_yn ,  CAST(a.ios_yn AS NUMERIC)/ a.tot    as    ios_yn ,  CAST(a.java_yn AS NUMERIC)/ a.tot    as    java_yn ,  CAST(a.javascript_yn AS NUMERIC)/ a.tot    as    javascript_yn ,  CAST(a.jquery_yn AS NUMERIC)/ a.tot    as    jquery_yn ,  CAST(a.json_yn AS NUMERIC)/ a.tot    as    json_yn ,  CAST(a.kotlin_yn AS NUMERIC)/ a.tot    as    kotlin_yn ,  CAST(a.laravel_yn AS NUMERIC)/ a.tot    as    laravel_yn ,  CAST(a.linux_yn AS NUMERIC)/ a.tot    as    linux_yn ,  CAST(a.list_yn AS NUMERIC)/ a.tot    as    list_yn ,  CAST(a.mongodb_yn AS NUMERIC)/ a.tot    as    mongodb_yn ,  CAST(a.mysql_yn AS NUMERIC)/ a.tot    as    mysql_yn ,  CAST(a.nextjs_yn AS NUMERIC)/ a.tot    as    nextjs_yn ,  CAST(a.nodejs_yn AS NUMERIC)/ a.tot    as    nodejs_yn ,  CAST(a.numpy_yn AS NUMERIC)/ a.tot    as    numpy_yn ,  CAST(a.pandas_yn AS NUMERIC)/ a.tot    as    pandas_yn ,  CAST(a.php_yn AS NUMERIC)/ a.tot    as    php_yn ,  CAST(a.postgresql_yn AS NUMERIC)/ a.tot    as    postgresql_yn ,  CAST(a.python_yn AS NUMERIC)/ a.tot    as    python_yn ,  CAST(a.python_3x_yn AS NUMERIC)/ a.tot    as    python_3x_yn ,  CAST(a.r_yn AS NUMERIC)/ a.tot    as    r_yn ,  CAST(a.react_native_yn AS NUMERIC)/ a.tot    as    react_native_yn ,  CAST(a.reactjs_yn AS NUMERIC)/ a.tot    as    reactjs_yn ,  CAST(a.spring_yn AS NUMERIC)/ a.tot    as    spring_yn ,  CAST(a.spring_boot_yn AS NUMERIC)/ a.tot    as    spring_boot_yn ,  CAST(a.sql_yn AS NUMERIC)/ a.tot    as    sql_yn ,  CAST(a.sql_server_yn AS NUMERIC)/ a.tot    as    sql_server_yn ,  CAST(a.swift_yn AS NUMERIC)/ a.tot    as    swift_yn ,  CAST(a.typescript_yn AS NUMERIC)/ a.tot    as    typescript_yn ,  CAST(a.vba_yn AS NUMERIC)/ a.tot    as    vba_yn ,  CAST(a.visual_studio_code_yn AS NUMERIC)/ a.tot    as    visual_studio_code_yn ,  CAST(a.vuejs_yn AS NUMERIC)/ a.tot    as    vuejs_yn , '"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a.python_yn / a.tot              as python_yn,\n",
+    "\n",
+    "' '.join(['CAST(a.'+x+'_yn AS NUMERIC)/ a.tot    as    '+x+'_yn , ' for x in sede_treat_0_1.columns[2:]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
