--- a/complexity/test.ipynb
+++ b/complexity/test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle\n",
-    "import lizard\n"
+    "import lizard\n",
+    "import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +132,7 @@
        "4  <p>I'm trying to use a logo plus a background ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "Name: body, Length: 229303, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -241,13 +242,54 @@
        "Name: c_body, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "complexity_df['c_body'].iloc[0:3].apply(lambda x : x['code_sections'][0]['span_str'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'@Override\\npublic void punctuate(long l) {\\n    log.info(&quot;PeriodicRetryPunctuator started: &quot; + l);\\n\\n    try(KeyValueIterator&lt;String, TestEventObject&gt; iter = stateStore.all()) {\\n        while(iter.hasNext()) {\\n            KeyValue&lt;String, TestEventObject&gt; keyValue = iter.next();\\n            String key = keyValue.key;\\n            TestEventObject event = keyValue.value;\\n            \\n            try {\\n                log.info(&quot;Event: &quot; + event);\\n                // Sends event over HTTP. Will throw HttpResponseException if 404 is received\\n                eventService.processEvent(event);\\n                \\n                stateStore.delete(key);\\n                stateStore.flush();\\n                \\n                // Check that statestore returns null\\n                log.info(&quot;Check: &quot; + stateStore.get(key));\\n            } catch (HttpResponseException hre) {\\n                log.info(&quot;Periodic retry received 404. Retrying at next interval&quot;);\\n            }\\n            catch (Exception e) {\\n                e.printStackTrace();\\n                log.error(&quot;Exception with periodic retry: {}&quot;, e.getMessage());\\n            }\\n        }\\n    }\\n}\\n'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complexity_df.loc[0, 'c_body']['code_sections'][0]['span_str']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'apply'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[58], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcomplexity_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mc_body\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply\u001b[49m(\u001b[38;5;28;01mlambda\u001b[39;00m x : x[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcode_sections\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspan_str\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'apply'"
+     ]
+    }
+   ],
+   "source": [
+    "complexity_df.loc[0, 'c_body'].apply(lambda x : x['code_sections'][0]['span_str'])"
    ]
   },
   {
@@ -261,42 +303,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "for x in range(3):\n",
-    "    with open('../../data/'+str(x)+'.py', 'wb') as f:\n",
+    "    with open('../../data/complexity/'+str(x)+'.java', 'wb') as f:\n",
     "        pickle.dump(complexity_df['c_body'].iloc[0:3].apply(lambda x : x['code_sections'][0]['span_str'])[x]\n",
     "                    , f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = lizard.analyze_file(\"../../data/complexity/java.java\")"
+    "i = lizard.analyze_file(\"../../data/complexity/a.java\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'filename': '../../data/complexity/java.java', 'nloc': 24, 'function_list': [<lizard.FunctionInfo object at 0x38ed869a0>], 'token_count': 218}\n"
+      "{'filename': '../../data/complexity/a.java',\n",
+      " 'nloc': 24,\n",
+      " 'function_list': [<lizard.FunctionInfo object at 0x173676e50>],\n",
+      " 'token_count': 218}\n"
      ]
     }
    ],
    "source": [
-    "print(i.__dict__)"
+    "pprint.pp(i.__dict__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cyclomatic_complexity': 4,\n",
+      " 'nloc': 23,\n",
+      " 'token_count': 214,\n",
+      " 'name': 'punctuate',\n",
+      " 'long_name': 'punctuate( long l)',\n",
+      " 'start_line': 2,\n",
+      " 'end_line': 30,\n",
+      " 'full_parameters': ['long l'],\n",
+      " 'filename': '../../data/complexity/a.java',\n",
+      " 'top_nesting_level': 0,\n",
+      " 'fan_in': 0,\n",
+      " 'fan_out': 0,\n",
+      " 'general_fan_out': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pp(i.function_list[0].__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
